@@ -120,6 +120,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -287,7 +297,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * Factory for {@link SynonymFilter}.  *<pre class="prettyprint">  *&lt;fieldType name="text_synonym" class="solr.TextField" positionIncrementGap="100"&gt;  *&lt;analyzer&gt;  *&lt;tokenizer class="solr.WhitespaceTokenizerFactory"/&gt;  *&lt;filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt"   *             format="solr" ignoreCase="false" expand="true"   *             tokenizerFactory="solr.WhitespaceTokenizerFactory"/&gt;  *&lt;/analyzer&gt;  *&lt;/fieldType&gt;</pre>  */
+comment|/**  * Factory for {@link SynonymFilter}.  *<pre class="prettyprint">  *&lt;fieldType name="text_synonym" class="solr.TextField" positionIncrementGap="100"&gt;  *&lt;analyzer&gt;  *&lt;tokenizer class="solr.WhitespaceTokenizerFactory"/&gt;  *&lt;filter class="solr.SynonymFilterFactory" synonyms="synonyms.txt"   *             format="solr" ignoreCase="false" expand="true"   *             tokenizerFactory="solr.WhitespaceTokenizerFactory"  *             [optional tokenizer factory parameters]/&gt;  *&lt;/analyzer&gt;  *&lt;/fieldType&gt;</pre>  *   *<p>  * An optional param name prefix of "tokenizerFactory." may be used for any   * init params that the SynonymFilterFactory needs to pass to the specified   * TokenizerFactory.  If the TokenizerFactory expects an init parameters with   * the same name as an init param used by the SynonymFilterFactory, the prefix   * is mandatory.  *</p>  */
 end_comment
 
 begin_class
@@ -330,6 +340,26 @@ specifier|final
 name|boolean
 name|expand
 decl_stmt|;
+DECL|field|tokArgs
+specifier|private
+specifier|final
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|tokArgs
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
 DECL|field|map
 specifier|private
 name|SynonymMap
@@ -364,26 +394,6 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
-name|tokenizerFactory
-operator|=
-name|get
-argument_list|(
-name|args
-argument_list|,
-literal|"tokenizerFactory"
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|tokenizerFactory
-operator|!=
-literal|null
-condition|)
-block|{
-name|assureMatchVersion
-argument_list|()
-expr_stmt|;
-block|}
 name|synonyms
 operator|=
 name|require
@@ -413,6 +423,97 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+name|tokenizerFactory
+operator|=
+name|get
+argument_list|(
+name|args
+argument_list|,
+literal|"tokenizerFactory"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|tokenizerFactory
+operator|!=
+literal|null
+condition|)
+block|{
+name|assureMatchVersion
+argument_list|()
+expr_stmt|;
+name|tokArgs
+operator|.
+name|put
+argument_list|(
+literal|"luceneMatchVersion"
+argument_list|,
+name|getLuceneMatchVersion
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Iterator
+argument_list|<
+name|String
+argument_list|>
+name|itr
+init|=
+name|args
+operator|.
+name|keySet
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|itr
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|String
+name|key
+init|=
+name|itr
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|tokArgs
+operator|.
+name|put
+argument_list|(
+name|key
+operator|.
+name|replaceAll
+argument_list|(
+literal|"^tokenizerFactory\\."
+argument_list|,
+literal|""
+argument_list|)
+argument_list|,
+name|args
+operator|.
+name|get
+argument_list|(
+name|key
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|itr
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 if|if
 condition|(
 operator|!
@@ -975,36 +1076,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|args
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|args
-operator|.
-name|put
-argument_list|(
-literal|"luceneMatchVersion"
-argument_list|,
-name|getLuceneMatchVersion
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|Class
 argument_list|<
 name|?
@@ -1040,7 +1111,7 @@ argument_list|)
 operator|.
 name|newInstance
 argument_list|(
-name|args
+name|tokArgs
 argument_list|)
 decl_stmt|;
 if|if
