@@ -40,6 +40,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -76,9 +96,25 @@ name|lucene
 operator|.
 name|analysis
 operator|.
-name|synonym
+name|pattern
 operator|.
-name|SynonymFilter
+name|PatternTokenizerFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
+name|TokenFilterFactory
 import|;
 end_import
 
@@ -95,6 +131,22 @@ operator|.
 name|util
 operator|.
 name|BaseTokenStreamFactoryTestCase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
+name|ClasspathResourceLoader
 import|;
 end_import
 
@@ -328,6 +380,182 @@ literal|"Unknown parameters"
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+DECL|field|TOK_SYN_ARG_VAL
+specifier|static
+specifier|final
+name|String
+name|TOK_SYN_ARG_VAL
+init|=
+literal|"argument"
+decl_stmt|;
+DECL|field|TOK_FOO_ARG_VAL
+specifier|static
+specifier|final
+name|String
+name|TOK_FOO_ARG_VAL
+init|=
+literal|"foofoofoo"
+decl_stmt|;
+comment|/** Test that we can parse TokenierFactory's arguments */
+DECL|method|testTokenizerFactoryArguments
+specifier|public
+name|void
+name|testTokenizerFactoryArguments
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|clazz
+init|=
+name|PatternTokenizerFactory
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|TokenFilterFactory
+name|factory
+init|=
+literal|null
+decl_stmt|;
+comment|// simple arg form
+name|factory
+operator|=
+name|tokenFilterFactory
+argument_list|(
+literal|"Synonym"
+argument_list|,
+literal|"synonyms"
+argument_list|,
+literal|"synonyms.txt"
+argument_list|,
+literal|"tokenizerFactory"
+argument_list|,
+name|clazz
+argument_list|,
+literal|"pattern"
+argument_list|,
+literal|"(.*)"
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"0"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|factory
+argument_list|)
+expr_stmt|;
+comment|// prefix
+name|factory
+operator|=
+name|tokenFilterFactory
+argument_list|(
+literal|"Synonym"
+argument_list|,
+literal|"synonyms"
+argument_list|,
+literal|"synonyms.txt"
+argument_list|,
+literal|"tokenizerFactory"
+argument_list|,
+name|clazz
+argument_list|,
+literal|"tokenizerFactory.pattern"
+argument_list|,
+literal|"(.*)"
+argument_list|,
+literal|"tokenizerFactory.group"
+argument_list|,
+literal|"0"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|factory
+argument_list|)
+expr_stmt|;
+comment|// sanity check that sub-PatternTokenizerFactory fails w/o pattern
+try|try
+block|{
+name|factory
+operator|=
+name|tokenFilterFactory
+argument_list|(
+literal|"Synonym"
+argument_list|,
+literal|"synonyms"
+argument_list|,
+literal|"synonyms.txt"
+argument_list|,
+literal|"tokenizerFactory"
+argument_list|,
+name|clazz
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"tokenizerFactory should have complained about missing pattern arg"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|expected
+parameter_list|)
+block|{
+comment|// :NOOP:
+block|}
+comment|// sanity check that sub-PatternTokenizerFactory fails on unexpected
+try|try
+block|{
+name|factory
+operator|=
+name|tokenFilterFactory
+argument_list|(
+literal|"Synonym"
+argument_list|,
+literal|"synonyms"
+argument_list|,
+literal|"synonyms.txt"
+argument_list|,
+literal|"tokenizerFactory"
+argument_list|,
+name|clazz
+argument_list|,
+literal|"tokenizerFactory.pattern"
+argument_list|,
+literal|"(.*)"
+argument_list|,
+literal|"tokenizerFactory.bogusbogusbogus"
+argument_list|,
+literal|"bogus"
+argument_list|,
+literal|"tokenizerFactory.group"
+argument_list|,
+literal|"0"
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"tokenizerFactory should have complained about missing pattern arg"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|expected
+parameter_list|)
+block|{
+comment|// :NOOP:
 block|}
 block|}
 block|}
